# fastapi_template

./: LICENSE  cookiecutter.json  makefile  pyproject.toml
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: .gitignore  config.yaml  makefile
{{cookiecutter.project_slug}}/dev_configs/: .flake8  .isort.cfg  .pylintrc
{{cookiecutter.project_slug}}/tests/: __init__.py  conftest.py  test_client.py  utils.py
{{cookiecutter.project_slug}}/tests/gateway/: __init__.py
{{cookiecutter.project_slug}}/tests/gateway/api/: __init__.py  connectivity_test.py  login_test.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __init__.py  containers.py  utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/application/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/application/base/: __init__.py  services.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/application/schemas/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/application/services/: __init__.py  login.py  token.py  user.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/domain/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/domain/base/: __init__.py  entities.py  repositories.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/gateway/: __init__.py  deps.py  middlewares.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/infrastructure/: __init__.py  smtp_client.py
(+22 files in other folders)
