[tool.poetry]
name = "fastapi_template"
version = "0.1.0"
description = "FastAPI Template"
authors = ["Angel Felipe Santaliestra Pasias <afsantaliestra@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
